dodałem wpis o możliwości kopiowania

--- a/templates/about.html
+++ b/templates/about.html
@@ -16,5 +16,7 @@
         </p>
         <br/>
         <a href="{% url 'home' %}">Zacznij zmieniać swoje życie już teraz!</a>
+
+        <p> ej i jak coś to można kopiować tą stronę, jest dla wszystkich !!</p>
     </body>
 </html>
